WP-9078 Adding the correct spacing for the annoucements and school stories.

--- a/css/conditionals/news/announcement-detail.css
+++ b/css/conditionals/news/announcement-detail.css
@@ -217,7 +217,7 @@
 }
 .node-announcement.view-mode-full .group-left .field-name-social-buttons-top .item-list ul li,
 .node-announcement.view-mode-full .group-left .field-name-social-buttons-bottom .item-list ul li {
-  margin: 0;
+  margin: 0 12px 0 0;
 }
 .node-announcement.view-mode-full .group-left .field-name-social-buttons-top li,
 .node-announcement.view-mode-full .group-left .field-name-social-buttons-bottom li {
