--- a/css/conditionals/news/school-story-detail.css
+++ b/css/conditionals/news/school-story-detail.css
@@ -228,7 +228,7 @@
 }
 .node-school-story.view-mode-full .group-left .field-name-social-buttons-top .item-list ul li,
 .node-school-story.view-mode-full .group-left .field-name-social-buttons-bottom .item-list ul li {
-  margin: 0;
+  margin: 0 12px 0 0;
 }
 .node-school-story.view-mode-full .group-left .field-name-social-buttons-top li,
 .node-school-story.view-mode-full .group-left .field-name-social-buttons-bottom li {
